fallback to css variables

--- a/scopes/code/ui/code-tab-tree/code-tab-tree.module.scss
+++ b/scopes/code/ui/code-tab-tree/code-tab-tree.module.scss
@@ -12,7 +12,7 @@
     border-bottom: 1px solid var(--bit-border-color-lightest, #ededed);
   }
   > div:last-child {
-    border-bottom: 1px solid var(--bit-border-color-lightest);
+    border-bottom: 1px solid var(--bit-border-color-lightest, #ededed);
   }
 }
 
