--- a/scopes/explorer/command-bar/ui/command-bar-item/command-bar-item.module.scss
+++ b/scopes/explorer/command-bar/ui/command-bar-item/command-bar-item.module.scss
@@ -15,7 +15,7 @@
 
   &.active,
   &.active:hover {
-    background-color: var(--bit-accent-bg);
+    background-color: var(--bit-accent-bg, #eceaff);
   }
 }
 
