--- a/scopes/workspace/ui/load-preview/load-preview.module.scss
+++ b/scopes/workspace/ui/load-preview/load-preview.module.scss
@@ -8,7 +8,7 @@
   font-size: 12px;
   border-radius: 6px;
   color: var(--bit-text-on-accent, #ffffff);
-  background-color: var(--bit-text-color);
+  background-color: var(--bit-text-color, #414141);
   padding: 4px 8px;
   transition: background-color 300ms ease-in-out;
   &:hover {
