--- a/scopes/compositions/compositions/ui/compositions-overview/compositions-overview.module.scss
+++ b/scopes/compositions/compositions/ui/compositions-overview/compositions-overview.module.scss
@@ -1,8 +1,8 @@
 .background {
-  background: var(--bit-bg-dent);
+  background: var(--bit-bg-dent, #f6f6f6);
   padding: 12px;
   border-radius: 6px;
-  border: 1px solid var(--bit-border-color-lightest);
+  border: 1px solid var(--bit-border-color-lightest, #ededed);
   display: flex;
   overflow-x: auto;
 
