--- a/scopes/compositions/compositions/ui/compositions-panel/compositions-panel.module.scss
+++ b/scopes/compositions/compositions/ui/compositions-panel/compositions-panel.module.scss
@@ -14,7 +14,7 @@
     .right {
       visibility: unset;
       opacity: 1;
-      color: var(--bit-text-color-light);
+      color: var(--bit-text-color-light, #6c707c);
       //TODO - fix hover effect and timing of icon
       transition: visibility 200ms, opacity 100ms ease-in-out;
       .icon {
@@ -27,8 +27,8 @@
   &.active {
     display: flex;
     align-items: center;
-    background-color: var(--bit-accent-color);
-    color: var(--bit-bg-color);
+    background-color: var(--bit-accent-color, #6c5ce7);
+    color: var(--bit-bg-color, #ffffff);
 
     // overrides
     &:hover {
@@ -36,16 +36,16 @@
     }
 
     .box {
-      background-color: var(--bit-bg-color);
+      background-color: var(--bit-bg-color, #ffffff);
     }
 
     .right {
       visibility: unset;
       opacity: 1;
-      color: var(--bit-accent-bg);
+      color: var(--bit-accent-bg, #eceaff);
       .icon {
         &:hover {
-          color: var(--bit-bg-color);
+          color: var(--bit-bg-color, #ffffff);
         }
       }
     }
@@ -109,7 +109,7 @@
         top: 0;
         left: 0;
         right: 0;
-        background-color: var(--bit-accent-color);
+        background-color: var(--bit-accent-color, #6c5ce7);
         height: 3px;
         border-radius: 10px;
         transition: background-color 300ms, height 300ms;
