--- a/scopes/design/ui/empty-box/empty-box.module.scss
+++ b/scopes/design/ui/empty-box/empty-box.module.scss
@@ -1,14 +1,14 @@
 .emptyCompositions {
   margin: auto;
   padding: 20px;
-  font-size: var(--bit-p-sm);
+  font-size: var(--bit-p-sm, 15px);
   * {
     text-overflow: ellipsis;
   }
 }
 
 .innerBorder {
-  border: 1px solid var(--bit-border-color-lightest);
+  border: 1px solid var(--bit-border-color-lightest, #ededed);
   padding: 24px;
   border-radius: 8px;
   overflow: hidden;
@@ -24,7 +24,7 @@
     text-decoration: none;
 
     > span {
-      font-size: var(--bit-p-xxs);
+      font-size: var(--bit-p-xxs, 12px);
       padding-left: 5px;
     }
   }
