--- a/scopes/design/ui/separator/separator.module.scss
+++ b/scopes/design/ui/separator/separator.module.scss
@@ -1,4 +1,4 @@
 .separator {
-  border-bottom: 1px solid var(--bit-border-color-lightest);
+  border-bottom: 1px solid var(--bit-border-color-lightest, #ededed);
   width: 100%;
 }
