--- a/scopes/design/ui/surfaces/menu/item/item.module.scss
+++ b/scopes/design/ui/surfaces/menu/item/item.module.scss
@@ -6,7 +6,7 @@
   color: var(--bit-text-color-heavy);
 
   .icon {
-    color: var(--bit-text-color-light);
+    color: var(--bit-text-color-light, #6c707c);
     margin-right: 0.76em;
     font-size: 1.15em;
   }
@@ -18,13 +18,13 @@
 }
 
 .active {
-  background: var(--bit-accent-bg);
+  background: var(--bit-accent-bg, #eceaff);
 
   &:hover {
-    background: var(--bit-accent-bg);
+    background: var(--bit-accent-bg, #eceaff);
   }
 
   .icon {
-    color: var(--bit-accent-color);
+    color: var(--bit-accent-color, #6c5ce7);
   }
 }
