--- a/scopes/design/ui/surfaces/menu/section/section.module.scss
+++ b/scopes/design/ui/surfaces/menu/section/section.module.scss
@@ -1,6 +1,6 @@
 .menuSection {
   padding: 16px 0;
-  border-bottom: 1px solid var(--bit-border-color-lightest);
+  border-bottom: 1px solid var(--bit-border-color-lightest, #ededed);
   font-size: var(--bit-p-xs);
 }
 
