--- a/scopes/harmony/ui/aspect-box/aspect-box.module.scss
+++ b/scopes/harmony/ui/aspect-box/aspect-box.module.scss
@@ -1,5 +1,5 @@
 .aspectBox {
-  border: 1px solid var(--bit-border-color);
+  border: 1px solid var(--bit-border-color, #babec9);
   border-radius: 9px;
   padding: 16px;
   display: grid;
@@ -32,7 +32,7 @@
 }
 .aspectLink {
   cursor: pointer;
-  color: var(--bit-text-color-light);
+  color: var(--bit-text-color-light, #6c707c);
 }
 .sectionTitle {
   margin-bottom: 16px;
