added use box to scope header

--- a/scopes/scope/scope/ui/menu/menu.module.scss
+++ b/scopes/scope/scope/ui/menu/menu.module.scss
@@ -2,3 +2,7 @@
   background-color: var(--bit-bg-color, #ffffff);
   border-bottom: 1px solid var(--bit-border-color-lightest, #ededed);
 }
+
+.useBox {
+  --bit-drawer-margin: 14px;
+}
