fix "heavy background" color

--- a/scopes/code/ui/dependency-tree/dependency-drawer/dependency-drawer.module.scss
+++ b/scopes/code/ui/dependency-tree/dependency-drawer/dependency-drawer.module.scss
@@ -39,6 +39,6 @@
   min-width: 0;
   font-size: 14px;
   &:hover {
-    background: var(--bit-bg-color-highlight);
+    background: var(--bit-bg-heavy, #f6f6f6);
   }
 }
