--- a/scopes/ui-foundation/uis/keycap/key.module.scss
+++ b/scopes/ui-foundation/uis/keycap/key.module.scss
@@ -49,6 +49,6 @@
 //   vertical-align: middle;
 //   text-transform: uppercase;
 
-//   background: var(--bit-bg-color-highlight);
+//   background: var(--bit-bg-heavy, #f6f6f6);
 //   box-shadow: var(--bit-shadow-raised-low);
 // }
