--- a/scopes/ui-foundation/uis/side-bar/component-tree/component-view/component-view.module.scss
+++ b/scopes/ui-foundation/uis/side-bar/component-tree/component-view/component-view.module.scss
@@ -17,7 +17,7 @@
   border-left: 0px solid transparent;
 
   &:hover {
-    background: var(--bit-bg-color-highlight);
+    background: var(--bit-bg-heavy, #f6f6f6);
     .envIcon {
       filter: grayscale(0);
     }
