--- a/src/to-eject/css-components/hoverable/hoverable.module.scss
+++ b/src/to-eject/css-components/hoverable/hoverable.module.scss
@@ -3,6 +3,6 @@
   border-radius: 4px;
 
   &:hover {
-    background: var(--bit-bg-color-highlight);
+    background: var(--bit-bg-heavy, #f6f6f6);
   }
 }
