--- a/scopes/ui-foundation/tree/drawer/drawer.module.scss
+++ b/scopes/ui-foundation/tree/drawer/drawer.module.scss
@@ -21,8 +21,8 @@
   border-bottom: 1px solid #ededed;
   transition: background-color 300ms, border-color 300ms ease-in-out;
   &:hover {
-    border-color: var(--bit-bg-color-highlight);
-    background: var(--bit-bg-color-highlight);
+    border-color: var(--bit-bg-heavy, #f6f6f6);
+    background: var(--bit-bg-heavy, #f6f6f6);
     .link {
       visibility: visible;
       opacity: 1;
