add font-weight in scope icon

--- a/scopes/scope/ui/scope-icon/scope-icon.module.scss
+++ b/scopes/scope/ui/scope-icon/scope-icon.module.scss
@@ -10,6 +10,7 @@
   justify-content: center;
   text-align: center;
   background-color: var(--bit-border-color, #babec9);
+  font-weight: normal;
 }
 .letter {
   color: var(--bit-bg-color, white);
