--- a/scopes/design/ui/tooltip/tippy.module.scss
+++ b/scopes/design/ui/tooltip/tippy.module.scss
@@ -1,3 +1,5 @@
+// NOTE: this file should only be used to apply 'teambit' theme to tippy's default global css. use separate file for adding scoped css.
+
 $bg: var(--bit-bg-tooltip, #2b2b2b);
 $textColor: var(--bit-text-color, #fff);
 
