fix error-fallback icon flexing in low res

--- a/scopes/react/ui/error-fallback/error-fallback.module.scss
+++ b/scopes/react/ui/error-fallback/error-fallback.module.scss
@@ -26,6 +26,10 @@
 
   color: var(--bit-error-color, #e62e5c);
   font-family: sans-serif;
+
+  > * {
+    flex: none; // prevent squashing in low res
+  }
 }
 
 @keyframes enter {
