remove default max width from Tooltip in use box menu (#4919)

--- a/scopes/design/ui/tooltip/tippy.module.scss
+++ b/scopes/design/ui/tooltip/tippy.module.scss
@@ -15,6 +15,11 @@ $textColor: var(--bit-text-color, #fff);
       white-space: nowrap;
     }
 
+    &.tippy-breakLine .tippy-content {
+      white-space: pre-line;
+      word-break: break-all;
+    }
+
     .tippy-svg-arrow {
       fill: $bg;
     }
